--- a/.env
+++ b/.env
@@ -26,8 +26,11 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_USERNAME=e5ff36acb91242
+MAIL_PASSWORD=ee76028886f157
+MAIL_FROM_ADDRESS=from@example.com
+MAIL_FROM_NAME=Example
+
 MAIL_ENCRYPTION=null
 
 AWS_ACCESS_KEY_ID=
