--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "intervention/image": "^2.4",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
-        "tymon/jwt-auth": "^1.0.0"
+        "tymon/jwt-auth": "^1.0.0",
+        "gd": "*"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
