--- a/composer.json
+++ b/composer.json
@@ -8,15 +8,15 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.2",
+        "ext-gd": "*",
         "barryvdh/laravel-cors": "^0.11.3",
         "caouecs/laravel-lang": "~4.0",
         "fideloper/proxy": "^4.0",
         "intervention/image": "^2.4",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
-        "tymon/jwt-auth": "^1.0.0",
-        "ext-gd": "*"
+        "tymon/jwt-auth": "^1.0.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
