--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,13 @@
         "ext-gd": "*",
         "barryvdh/laravel-cors": "^0.11.3",
         "caouecs/laravel-lang": "~4.0",
+        "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.0",
         "intervention/image": "^2.4",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
-        "tymon/jwt-auth": "^1.0.0",
-        "league/flysystem-aws-s3-v3": "~1.0"
+        "league/flysystem-aws-s3-v3": "~1.0",
+        "tymon/jwt-auth": "^1.0.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
