--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
+        "ext-gd": "*",
         "barryvdh/laravel-cors": "^0.11.3",
         "caouecs/laravel-lang": "~4.0",
         "doctrine/dbal": "^2.9",
@@ -17,7 +18,8 @@
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "league/flysystem-aws-s3-v3": "~1.0",
-        "tymon/jwt-auth": "^1.0.0"
+        "predis/predis": "^1.1",
+        "tymon/jwt-auth": "1.0.0-rc.5"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
