--- a/composer.json
+++ b/composer.json
@@ -8,14 +8,14 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2",
+        "php": "^7.3",
         "ext-gd": "*",
-        "barryvdh/laravel-cors": "^0.11.3",
+        "barryvdh/laravel-cors": "^0.11",
         "caouecs/laravel-lang": "~4.0",
         "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.0",
         "intervention/image": "^2.4",
-        "laravel/framework": "5.8.*",
+        "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0",
         "league/flysystem-aws-s3-v3": "~1.0",
         "predis/predis": "^1.1",
